ngx-star-rating commited

--- a/src/app/images-grid/images-grid.component.css
+++ b/src/app/images-grid/images-grid.component.css
@@ -3,3 +3,13 @@ img{
     width: 100%;
     height: 250px;
 }
+
+.container {
+    width:800px;
+    height: 350px;
+    position: absolute;
+    top: 50%;
+    left: 75%;
+    transform: translate(-50%, -50%);
+    display: inline-flex;
+}
