--- a/src/app/images-grid/images-grid.component.html
+++ b/src/app/images-grid/images-grid.component.html
@@ -1,8 +1,8 @@
 
-<div class="container">
+<div class="container h-100 text-center">
   <br>
-  <div class="row">
-    <div class="col-sm-12 col-md-6 col-lg-4 p-3" *ngFor="let image of images" >
+  <div class="row text-center">
+    <div class="col-sm-12 col-md-6 col-lg-4 p-3 " *ngFor="let image of images" >
       <div class="card">
         <a routerLink="review" (click)="sendImageDetail(image.id)">
           <img src="{{image.url}}" title="{{image.title}}">
