ngx-Pagination commit1

--- a/src/app/images-grid/images-grid.component.html
+++ b/src/app/images-grid/images-grid.component.html
@@ -12,11 +12,12 @@
         </a>
       </div>
     </div>
-      
-    <pagination-controls id="ImgPage" 
-    directionLinks="true"
-    autoHide="true"
-    responsive="true"
-    (pageChange)="page=$event"></pagination-controls>
+    <div style="position: relative; right: -16%; font-size:16px;">
+      <pagination-controls id="ImgPage" 
+      directionLinks="true"
+      autoHide="true"
+      responsive="true"
+      (pageChange)="page=$event"></pagination-controls>
+    </div>  
   </div>
 </div>
